tests/rosetta/out/C/bitmap.c
// Generated by Mochi compiler v0.10.26 on 2006-01-02T15:04:05Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static char *concat_string(char *a, char *b) {
  size_t len1 = strlen(a);
  size_t len2 = strlen(b);
  char *buf = (char *)malloc(len1 + len2 + 1);
  memcpy(buf, a, len1);
  memcpy(buf + len1, b, len2);
  buf[len1 + len2] = '\0';
  return buf;
}
static char *_str(int v) {
  char *buf = (char *)malloc(32);
  sprintf(buf, "%d", v);
  return buf;
}
typedef struct Pixel Pixel;
typedef struct Bitmap Bitmap;

typedef struct {
  int cols;
  int rows;
} tmp_item_t;
typedef struct {
  int len;
  tmp_item_t *data;
} tmp_item_list_t;
tmp_item_list_t create_tmp_item_list(int len) {
  tmp_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(tmp_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int ok;
  pixel_t pixel;
} tmp_item1_t;
typedef struct {
  int len;
  tmp_item1_t *data;
} tmp_item1_list_t;
tmp_item1_list_t create_tmp_item1_list(int len) {
  tmp_item1_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(tmp_item1_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int r;
  int g;
  int b;
  int r;
  int g;
  int b;
} pixel_t;

typedef struct Pixel {
  int R;
  int G;
  int B;
} Pixel;
typedef struct {
  int len;
  pixel_t *data;
} pixel_list_t;
pixel_list_t create_pixel_list(int len) {
  pixel_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(pixel_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct Bitmap {
  int cols;
  int rows;
  list_int px;
} Bitmap;
typedef struct {
  int len;
  bitmap_t *data;
} bitmap_list_t;
bitmap_list_t create_bitmap_list(int len) {
  bitmap_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(bitmap_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

pixel_t pixelFromRgb(int c) {
  int r = ((int)((((double)c) / ((double)65536)))) % 256;
  int g = ((int)((((double)c) / ((double)256)))) % 256;
  int b = c % 256;
  return (Pixel){.r = r, .g = g, .b = b};
}

int rgbFromPixel(Pixel *p) { return p->r * 65536 + p->g * 256 + p->b; }

bitmap_t NewBitmap(int x, int y) {
  list_int tmp1 = list_int_create(0);
  int data = tmp1;
  int row = 0;
  while (row < y) {
    list_int tmp2 = list_int_create(0);
    pixel_list_t r = tmp2;
    int col = 0;
    while (col < x) {
      r = 0;
      col = col + 1;
    }
    data = 0;
    row = row + 1;
  }
  return (Bitmap){.cols = x, .rows = y, .px = data};
}

map_string_int Extent(Bitmap *b) {
  return (tmp_item_t){.cols = b->cols, .rows = b->rows};
}

int Fill(Bitmap *b, Pixel *p) {
  int y = 0;
  while (y < b->rows) {
    int x = 0;
    while (x < b->cols) {
      int px = b->px;
      pixel_list_t row = px.data[y];
      row.data[x] = p;
      px.data[y] = row;
      b->px = px;
      x = x + 1;
    }
    y = y + 1;
  }
}

int FillRgb(Bitmap *b, int c) { Fill(&b, &pixelFromRgb(c)); }

int SetPx(Bitmap *b, int x, int y, Pixel *p) {
  if (x < 0 || x >= b->cols || y < 0 || y >= b->rows) {
    return 0;
  }
  int px = b->px;
  pixel_list_t row = px.data[y];
  row.data[x] = p;
  px.data[y] = row;
  b->px = px;
  return 1;
}

int SetPxRgb(Bitmap *b, int x, int y, int c) {
  return SetPx(&b, x, y, &pixelFromRgb(c));
}

int GetPx(Bitmap *b, int x, int y) {
  if (x < 0 || x >= b->cols || y < 0 || y >= b->rows) {
    return (tmp_item_t){.ok = 0};
  }
  pixel_list_t row = b->px.data[y];
  return (tmp_item1_t){.ok = 1, .pixel = row.data[x]};
}

int GetPxRgb(Bitmap *b, int x, int y) {
  int r = GetPx(&b, x, y);
  if (((!r.ok))) {
    return (tmp_item_t){.ok = 0};
  }
  return (tmp_item1_t){.ok = 1, .rgb = rgbFromPixel(r.pixel)};
}

int ppmSize(Bitmap *b) {
  char *tmp3 = _str(b->cols);
  char *tmp4 = concat_string(
      "P6\n# Creator: Rosetta Code http://rosettacode.org/\n", tmp3);
  char *tmp5 = concat_string(tmp4, " ");
  char *tmp6 = _str(b->rows);
  char *tmp7 = concat_string(tmp5, tmp6);
  char *tmp8 = concat_string(tmp7, "\n255\n");
  const char *header = tmp8;
  return strlen(header) + 3 * b->cols * b->rows;
}

const char *pixelStr(Pixel *p) {
  char *tmp9 = _str(p->r);
  char *tmp10 = concat_string("{", tmp9);
  char *tmp11 = concat_string(tmp10, " ");
  char *tmp12 = _str(p->g);
  char *tmp13 = concat_string(tmp11, tmp12);
  char *tmp14 = concat_string(tmp13, " ");
  char *tmp15 = _str(p->b);
  char *tmp16 = concat_string(tmp14, tmp15);
  char *tmp17 = concat_string(tmp16, "}");
  return tmp17;
}

int main() {
  bitmap_t bm = NewBitmap(300, 240);
  FillRgb(&bm, 16711680);
  SetPxRgb(&bm, 10, 20, 255);
  SetPxRgb(&bm, 20, 30, 0);
  SetPxRgb(&bm, 30, 40, 1056816);
  int c1 = GetPx(&bm, 0, 0);
  int c2 = GetPx(&bm, 10, 20);
  int c3 = GetPx(&bm, 30, 40);
  char *tmp18 = _str(bm.cols);
  char *tmp19 = concat_string("Image size: ", tmp18);
  char *tmp20 = concat_string(tmp19, " × ");
  char *tmp21 = _str(bm.rows);
  char *tmp22 = concat_string(tmp20, tmp21);
  printf("%s\n", tmp22);
  char *tmp23 = _str(ppmSize(&bm));
  char *tmp24 = concat_string(tmp23, " bytes when encoded as PPM.");
  printf("%s\n", tmp24);
  if ((c1.ok)) {
    printf("%s\n", "Pixel at (0,0) is " + pixelStr(c1.pixel));
  }
  if ((c2.ok)) {
    printf("%s\n", "Pixel at (10,20) is " + pixelStr(c2.pixel));
  }
  if ((c3.ok)) {
    int p = c3.pixel;
    int r16 = p.r * 257;
    int g16 = p.g * 257;
    int b16 = p.b * 257;
    char *tmp25 = _str(r16);
    char *tmp26 = concat_string("Pixel at (30,40) has R=", tmp25);
    char *tmp27 = concat_string(tmp26, ", G=");
    char *tmp28 = _str(g16);
    char *tmp29 = concat_string(tmp27, tmp28);
    char *tmp30 = concat_string(tmp29, ", B=");
    char *tmp31 = _str(b16);
    char *tmp32 = concat_string(tmp30, tmp31);
    printf("%s\n", tmp32);
  }
}

int main() {
  main();
  return 0;
}
